--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@angular/compiler": "~11.2.6",
     "@angular/core": "~11.2.6",
     "@angular/forms": "^11.2.6",
+    "@angular/localize": "~11.2.6",
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "~11.2.6",
-    "bootstrap": "^5.0.0-beta2",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "angular-material": "^1.2.2",
+    "bootstrap": "^5.0.0-beta3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
