--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.0.0-beta3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
